Fix dark unreadable text while searching gifs (lite)

--- a/deslopcord-Lite.css
+++ b/deslopcord-Lite.css
@@ -1,8 +1,8 @@
 /**
- * @name deslopcord (Lite)
+ * @name deslopcord 07.04.2026 (Lite)
  * @author lixkote
  * @description Make Discord UI more simple, functional, and less cluttered. Made to slightly resemble mobile discord app, or pre-2025-redesign one.
- * @version 06.04.2026
+ * @version 07.04.2026
  */
 
 /* Remove float around user panel and dock it like before */
@@ -200,26 +200,6 @@ span[class*="timestampInline_"]>[aria-label^="Today at"]::before {
 }
 .container__37e49 {
     margin-inline-start: 0px;
-}
-
-.wrapper__72c38 {
-    position: relative;
-    --custom-input-background-color: var(--input-background-default);
-    --custom-input-border-color: var(--input-border-default);
-    --custom-input-text-color: var(--input-foreground-default);
-    --custom-input-hover-border-color: var(--input-border-default-hover);
-    --custom-input-focus-border-color: var(--input-border-active);
-    align-items: center;
-    background-color: var(--custom-input-background-color);
-    border: 1px solid var(--custom-input-border-color);
-    border-radius: var(--radius-sm);
-    box-sizing: border-box;
-    color: var(--custom-input-text-color);
-    display: flex
-    ;
-    flex-wrap: wrap;
-    gap: var(--space-4);
-    transition: border-color .1s ease;
 }
 
 .wrapper_ef3116 {
